--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 @import "normalize.css";
 @import "./colors";
 @import "./base";
+@import "./grids";
 @import "./buttons";
 @import "./forms";
 @import "./alerts";
