--- a/website/css/main.css
+++ b/website/css/main.css
@@ -131,6 +131,27 @@ a:hover, a:focus { color: color(var(--red) tint(15%)); }
 	box-shadow: 0 0 4px var(--red);
 }
 
+.form-feedback {
+	inherit: %form-stacked;
+}
+.form-feedback input, .form-feedback select, .form-feedback textarea {
+	border-radius: 0;
+	border-width: 2px;
+	border-color: var(--teal);
+	color: color(var(--teal) shade(35%));
+}
+.form-feedback input:focus, .form-feedback select:focus, .form-feedback textarea:focus, .form-feedback button:focus {
+	border-color: var(--fuchsia);
+}
+.form-feedback input:focus:invalid {
+	border-color: color(var(--red) shade(15%));
+}
+@media screen and (min-width: 640px) {
+	.form-feedback {
+		inherit: %form-aligned;
+	}
+}
+
 .small-forms form { margin: 1em; }
 @media screen and (min-width: 680px) {
 	.small-forms {
@@ -172,6 +193,9 @@ a:hover, a:focus { color: color(var(--red) tint(15%)); }
 .button-close {
 	inherit: %button-base;
 	button: bgcolor(transparent) fgcolor(inherit) circle(1.2em);
+}
+.button-close:focus {
+	border: var(--blue) 1px solid;
 }
 .alert-success {
 	inherit: %alert-base;
