--- a/forms.css
+++ b/forms.css
@@ -13,6 +13,10 @@ input, select, textarea {
 	-webkit-appearance: none;
 }
 
+input:invalid, select:invalid, textarea:invalid {
+	box-shadow: none; /* Reset Firefox's default */
+}
+
 input:focus, select:focus, textarea:focus {
 	outline: 0;
 	border-color: var(--blue);
