--- a/website/css/main.css
+++ b/website/css/main.css
@@ -190,6 +190,12 @@ a:hover, a:focus { color: color(var(--red) tint(15%)); }
 	transition: all 0.5s ease-in-quad;
 }
 
+@media screen and (max-width: 40em) {
+	.table-frameworks {
+		inherit: %table-collapsed;
+	}
+}
+
 .button-close {
 	inherit: %button-base;
 	button: bgcolor(transparent) fgcolor(inherit) circle(1.2em);
