--- a/website/css/main.css
+++ b/website/css/main.css
@@ -5,6 +5,19 @@ body {
 	margin: 0 auto;
 	font-family: Nunito, Avenir, sans-serif;
 }
+@media screen and (min-width: 70em) {
+	body {
+		width: 85%;
+	}
+	p {
+		width: 70%;
+	}
+}
+footer {
+	color: var(--gray);
+	margin: 3em 0;
+	font-size: 0.8em;
+}
 pre, code {
 	font-family: Inconsolata, monospace !important;
 }
@@ -18,6 +31,7 @@ a:hover, a:focus { color: color(var(--red) tint(15%)); }
 
 .thingies {
 	display: flex;
+	overflow: scroll;
 }
 :root {
 	--success: var(--green);
@@ -55,7 +69,7 @@ a:hover, a:focus { color: color(var(--red) tint(15%)); }
 .grid-example > * {
 	background: color(var(--purple) tint(60%) alpha(0.4));
 }
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 38em) {
 	.grid-example {
 		inherit: %grid-flex;
 	}
@@ -134,6 +148,9 @@ a:hover, a:focus { color: color(var(--red) tint(15%)); }
 .form-feedback {
 	inherit: %form-stacked;
 }
+.form-feedback label {
+	color: color(var(--teal) shade(25%));
+}
 .form-feedback input, .form-feedback select, .form-feedback textarea {
 	border-radius: 0;
 	border-width: 2px;
@@ -146,14 +163,14 @@ a:hover, a:focus { color: color(var(--red) tint(15%)); }
 .form-feedback input:focus:invalid {
 	border-color: color(var(--red) shade(15%));
 }
-@media screen and (min-width: 640px) {
+@media screen and (min-width: 40em) {
 	.form-feedback {
 		inherit: %form-aligned;
 	}
 }
 
 .small-forms form { margin: 1em; }
-@media screen and (min-width: 680px) {
+@media screen and (min-width: 43em) {
 	.small-forms {
 		display: flex;
 		justify-content: center;
