--- a/website/css/main.css
+++ b/website/css/main.css
@@ -85,26 +85,23 @@ a:hover, a:focus { color: color(var(--red) tint(15%)); }
 }
 
 .button-pure {
-	inherit: %button-base;
 	button: bgcolor(var(--silver)) fgcolor(var(--black)) rounded;
 }
 .button-pure:hover, .button-pure:focus {
-	button: bgcolor(var(--silver)) fgcolor(var(--black)) shade-gradient;
+	button-style: bgcolor(var(--silver)) fgcolor(var(--black)) shade-gradient;
 }
 .button-pure:focus {
 	border-color: var(--blue);
 }
 
 .button-success {
-	inherit: %button-base;
 	button: bgcolor(var(--green)) fgcolor(var(--white)) gradient;
 }
 .button-success:hover, .button-success:focus {
-	button: bgcolor(var(--green) shade(20%)) fgcolor(var(--white)) gradient bordered;
+	button-style: bgcolor(var(--green) shade(20%)) fgcolor(var(--white)) gradient bordered;
 }
 
 .button-yolo {
-	inherit: %button-base;
 	button: bgcolor(var(--purple)) circle(5em) gradient bordered;
 }
 .button-yolo:hover, .button-yolo:focus {
@@ -112,26 +109,23 @@ a:hover, a:focus { color: color(var(--red) tint(15%)); }
 }
 
 .button-yolo2 {
-	inherit: %button-base;
 	button: bgcolor(var(--white)) fgcolor(var(--orange)) circle(5em) borderonly;
 }
 .button-yolo2:hover, .button-yolo2:focus {
-	button: bgcolor(var(--white)) fgcolor(var(--orange) shade(15%)) borderonly;
+	button-style: bgcolor(var(--white)) fgcolor(var(--orange) shade(15%)) borderonly;
 }
 
 .button-borderonly {
-	inherit: %button-base;
 	button: bgcolor(var(--white)) fgcolor(var(--fuchsia)) borderonly pill;
 }
 .button-borderonly:hover, .button-borderonly:focus {
-	button: bgcolor(var(--white)) fgcolor(var(--yellow)) borderonly;
+	button-style: bgcolor(var(--white)) fgcolor(var(--yellow)) borderonly;
 }
 .button-borderonly2 {
-	inherit: %button-base;
 	button: bgcolor(var(--white)) fgcolor(var(--teal)) borderonly;
 }
 .button-borderonly2:hover, .button-borderonly2:focus {
-	button: bgcolor(var(--white)) fgcolor(var(--teal) shade(30%)) borderonly;
+	button-style: bgcolor(var(--white)) fgcolor(var(--teal) shade(30%)) borderonly;
 }
 
 .form-comment {
