--- a/base.css
+++ b/base.css
@@ -57,8 +57,8 @@ img { max-width: 100%; height: auto; }
 
 html {
 	hyphens: auto;
-	background: var(--white);
-	color: var(--almost-black);
+	background: white;
+	color: #3c3c3c;
 	line-height: 1.65;
 }
 
@@ -81,7 +81,7 @@ ul {
 }
 
 h1, h2, h3, h4, h5, h6 {
-	color: var(--black);
+	color: black;
 	text-rendering: optimizeLegibility; /* voodoo to enable ligatures and kerning */
 	line-height: 1; /* this fixes huge spaces when a heading wraps onto two lines */
 	margin-bottom: 0;
