--- a/forms.css
+++ b/forms.css
@@ -82,22 +82,71 @@ html input[disabled], select[disabled], select[disabled] option, select[disabled
 	margin-bottom: 0.8em;
 }
 
-%form-aligned label {
+%form-aligned label > * {
+	flex: 0 0 70%;
+	margin-left: 1em;
+}
+
+%form-aligned > label {
 	display: flex;
 	align-items: center;
 	justify-content: flex-end;
 	margin-bottom: 0.8em;
 }
 
-%form-aligned input, %form-aligned select, %form-aligned textarea {
-	flex: 0 0 70%;
-	margin-left: 1em;
-}
-
 %align-without-label {
 	margin-left: 30%;
 }
 
-%form-aligned button {
+%form-aligned > button {
 	inherit: %align-without-label;
+}
+
+%input-addons {
+	display: flex;
+	align-items: center;
+}
+
+%input-addons-rounded {
+	border-radius: 4px;
+}
+
+%input-addons span, %input-addons button {
+	border: silver 1px solid;
+	background: color(silver alpha(0.5));
+	display: inline-block;
+	padding: 0.5em 0.6em;
+}
+
+%input-addons > * {
+	line-height: normal;
+	border-radius: 0;
+	position: relative;
+	left: -1px;
+}
+
+%input-addons > *:focus {
+	z-index: 2;
+}
+
+%input-addons > *:first-child {
+	left: 0;
+}
+
+%input-addons > *:nth-child(3) {
+	left: -2px;
+}
+
+%input-addons-rounded > *:first-child {
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+}
+
+%input-addons-rounded > *:last-child {
+	border-top-right-radius: 4px;
+	border-bottom-right-radius: 4px;
+}
+
+%input-addons input, %input-addons select, %input-addons textarea {
+	flex: 1;
 }
