--- a/base.css
+++ b/base.css
@@ -91,6 +91,11 @@ h1, h2, h3, h4, h5, h6 {
 	margin-bottom: 0;
 }
 
+& small {
+	font-size: 50%;
+	color: gray;
+}
+
 h1 { font-size: var(--alpha); }
 h2 { font-size: var(--beta); }
 h3 { font-size: var(--gamma); }
