add media objects

--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 @import "normalize.css";
 @import "./base";
 @import "./grids";
+@import "./media";
 @import "./buttons";
 @import "./forms";
 @import "./tables";
