--- a/index.css
+++ b/index.css
@@ -1,8 +1,3 @@
 @import "normalize.css";
 @import "./base";
-@import "./grids";
-@import "./media";
-@import "./buttons";
-@import "./forms";
-@import "./tables";
-@import "./alerts";
+@import "./all";
