--- a/all.css
+++ b/all.css
@@ -2,6 +2,7 @@
 	--n-border-radius: var(--border-radius, 4px);
 }
 
+@import "./util";
 @import "./grids";
 @import "./media";
 @import "./buttons";
