--- a/util.css
+++ b/util.css
@@ -2,6 +2,7 @@
  * Somewhat inspired by (and includes parts of):
  *   http://getbootstrap.com
  *   http://typeplate.com
+ *   http://nicolasgallagher.com/micro-clearfix-hack/
  */
 
 @custom-media --hidpi only screen and (-webkit-min-device-pixel-ratio: 1.5),
@@ -9,15 +10,6 @@
 	only screen and (-o-min-device-pixel-ratio: 1.5/1),
 	only screen and (min-resolution: 144dpi),
 	only screen and (min-resolution: 1.5dppx);
-
-/*! Micro Clearfix http://nicolasgallagher.com/micro-clearfix-hack/ */
-%clearfix:before, %clearfix:after {
-	content: " ";
-	display: table;
-}
-%clearfix:after {
-	clear: both;
-}
 
 :root {
 	--tera: 6.5rem;
@@ -29,6 +21,15 @@
 	--delta: 1.3333rem;
 	--epsilon: 1.1667rem;
 	--zeta: 1rem;
+}
+
+%clearfix:before, %clearfix:after {
+	content: " ";
+	display: table;
+}
+
+%clearfix:after {
+	clear: both;
 }
 
 %small-caps {
@@ -46,4 +47,8 @@
 	overflow: hidden;
 	clip: rect(0px,0px,0px,0px);
 	border: 0px none;
+}
+
+%round {
+	border-radius: 999em;
 }
