--- a/all.css
+++ b/all.css
@@ -5,6 +5,7 @@
 @import "./util";
 @import "./grids";
 @import "./media";
+@import "./lists";
 @import "./buttons";
 @import "./forms";
 @import "./tables";
