--- a/tables.css
+++ b/tables.css
@@ -12,18 +12,18 @@
 	padding: 0.4em;
 }
 
-%table tr:nth-child(even) {
-	background: color(gray alpha(0.05));
+%table-striped tr:nth-child(even) {
+	background: color(silver alpha(0.15));
 }
 
 %table thead tr {
-	background: color(gray alpha(0.07));
+	background: color(gray alpha(0.15));
 }
 
 %table thead th {
 	text-align: left;
 	padding-top: 0.7em;
-	border-bottom: color(gray alpha(0.1)) solid 3px;
+	border-bottom: color(gray alpha(0.2)) solid 3px;
 }
 
 %table-collapsed, %table-collapsed thead, %table-collapsed tbody, %table-collapsed th, %table-collapsed td, %table-collapsed tr {
